--- a/syle.css
+++ b/syle.css
@@ -1,71 +1,70 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    width: 100vw;
-    height: auto;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+}
+.container {
+  display: flex;
+
+  flex-wrap: wrap;
+  width: 800px;
+  margin: 0 auto;
 }
 .tittle {
-    width: 80vw;
-    height: auto;
-    background-color: #2a9d8f;
-    font-size: 5vw;
-    text-align: center;
-    border: 0.4vw solid #f4a261 ;
-    border-radius: 3vw;
+  display: flex;
+  margin: 1rem auto;
+  width: 80vw;
+  flex-basis: content;
+  background-color: #2a9d8f;
+  font-size: 2rem;
+  justify-content: center;
+  border: 0.4rem solid #f4a261;
+  border-radius: 1rem;
 }
-div {
-    margin: 5vw;
-}
-main {
-   /*  margin-top: auto; */
-    width: 50vw;
-   /*  max-width: 60rem; */
-    height: auto;
-    /* max-height: 90rem; */
-    background-color: #023e8a ;
-    border: 0.5vw solid black;
-    border-radius: 3vw;
+
+.card {
+  width: 45%;
+  margin: 1rem auto;
+  height: auto;
+  background-color: #023e8a;
+  border: 0.2rem solid black;
+  border-radius: 1.5rem;
 }
 header {
-    width: 50%;
-    height: auto;
-    text-align: center;
-    font-size: 3vw;
-    margin: 0 auto;
-    background-color: #0077b6  ;
-    border: 0.5vw solid black;
-    border-radius: 3vw;
-    position: relative;
-    bottom: 3vw;
+  display: flex;
+  width: 60%;
+  height: auto;
+  justify-content: center;
+  font-size: 110%;
+  margin: 0 auto;
+  background-color: #0077b6;
+  border: 0.2rem solid black;
+  border-radius: 1rem;
+  position: relative;
+  bottom: 1.7rem;
 }
 
 .data {
-    width: 45vw;
-    height: auto;
-    margin: 0 auto;
-    font-size: 3vw;
-    background-color:#90e0ef ;
-    border: 0.5vw solid black;
-    border-radius: 3vw;
-    position: relative;
-    bottom: 1vh;
+  width: 90%;
+  height: 90%;
+  margin: 0 auto;
+  font-size: 3vw;
+  background-color: #90e0ef;
+  border: 0.2rem solid black;
+  border-radius: 1rem;
+  position: relative;
+  bottom: 1rem;
 }
 .data .data__letters {
-    margin: 1vw;
+  margin: 1rem;
 }
-.data .data__photo
-{
-    width: 90%;
-    height: 60%;
-  
+.data .data__photo {
+  width: 90%;
+  height: 60%;
 }
