--- a/syle.css
+++ b/syle.css
@@ -7,11 +7,10 @@ html {
   font-size: 62.5%;
 }
 body {
-  display: flex;
+  display: flex;s
 }
 .container {
   display: flex;
-
   flex-wrap: wrap;
   width: 800px;
   margin: 0 auto;
