--- a/syle.css
+++ b/syle.css
@@ -59,11 +59,15 @@ header {
   border-radius: 1rem;
   position: relative;
   bottom: 1rem;
+  
 }
 .data .data__letters {
   margin: 1rem;
 }
 .data .data__photo {
-  width: 90%;
+  width: 100%;
   height: 60%;
+ display: flex;
+ justify-content: center;
+ border-radius: 1rem;
 }
